--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -9,4 +9,10 @@
             android:gravity="center"
             android:src="@mipmap/launch_image" />
     </item> -->
+    <item>
+        <bitmap
+            android:gravity="fill"
+            android:mipMap="true"
+            android:src="@mipmap/splash"/>
+    </item>
 </layer-list>
